# cpplog

./: .gitignore  .gitmodules  BUILD.fmtlib  BUILD.nlohmann_json  CMakeLists.txt  WORKSPACE  conanfile.py  conanfile.txt
cmake/: FindCppFormat.cmake  UseCppFormat.cmake  UseNlohmannJson.cmake
cpplog/: BUILD  CMakeLists.txt  attachment.h  attachment_inl.h  config.h  console_sink.h  console_sink_unix.h  console_sink_windows.h  glog_sink.h  hex.h  json_attachment.h  json_builder.h  json_builder_inl.h  logging-inl.h  logging.h  macros.h  msgpack_pack.h  msgpack_unpack.h  nlohmann_json.h  record.h  record_inl.h  sink.h  support_nlohmann_json.h  utils.h
cpplog/codec/: CMakeLists.txt  byte_sink.h  sstream_byte_sink.h  ubjson_writer.h  ubjson_writer_test.cpp
cpplog/detail/: byte_sink.h  sstream_byte_sink.h  ubjson_writer.h  ubjson_writer_test.cpp
cpplog/formatter/: json_formatter.h  text_formatter.h
cpplog/port/: source_location.h  string_view.h
cpplog/sinks/: console_sink.h  console_sink_unix.h  console_sink_windows.h  file_sink.h  file_sink_inl.h  glog_sink.h  socket_helper.h  udp_sink.h  udp_sink_inl.h  zmq_sink.h
examples/: BUILD  CMakeLists.txt  udpsink_to_logstash.cpp
test/: BUILD  CMakeLists.txt  attachment_test.cpp  cpplog_unittest.cpp  file_sink_test.cpp  json_builder_unittest.cpp  msgpack_test.cpp  nlohmann_json_test.cpp  support_nlohmann_json_unittest.cpp  udp_sink_test.cpp  utils_test.cpp
tools/: CMakeLists.txt  zmqlogdump.cpp
